<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/img_back_white"
	android:focusableInTouchMode="true"
	android:orientation="vertical">


	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/_20sdp"
		android:layout_marginRight="@dimen/_20sdp"
		android:layout_marginTop="@dimen/_10sdp">

		<EditText
			android:id="@+id/pwd_txtOldPassword"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_40sdp"
			android:background="@drawable/back"
			android:backgroundTint="@android:color/white"
			android:hint="@string/hintOldPassword"
			android:inputType="textPassword"
			android:padding="@dimen/_7sdp" />

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/_20sdp"
		android:layout_marginRight="@dimen/_20sdp"
		android:layout_marginTop="@dimen/_10sdp">

		<EditText
			android:id="@+id/pwd_txtNewPassword"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_40sdp"
			android:background="@drawable/back"
			android:backgroundTint="@android:color/white"
			android:hint="@string/hintNewPassword"
			android:inputType="textPassword"
			android:padding="@dimen/_7sdp" />

	</android.support.design.widget.TextInputLayout>

	<android.support.design.widget.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="@dimen/_20sdp"
		android:layout_marginRight="@dimen/_20sdp"
		android:layout_marginTop="@dimen/_10sdp">

		<EditText
			android:id="@+id/pwd_txtConPassword"
			android:layout_width="match_parent"
			android:layout_height="@dimen/_40sdp"
			android:background="@drawable/back"
			android:backgroundTint="@android:color/white"
			android:hint="@string/hintConPassword"
			android:inputType="textPassword"
			android:padding="@dimen/_7sdp" />

	</android.support.design.widget.TextInputLayout>

	<TextView
		android:id="@+id/pwd_txtBtnLogin"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_40sdp"
		android:layout_marginLeft="@dimen/_20sdp"
		android:layout_marginRight="@dimen/_20sdp"
		android:layout_marginTop="@dimen/_10sdp"
		android:background="@drawable/back"
		android:gravity="center"
		android:padding="@dimen/_7sdp"
		android:text="@string/actionProceed"
		android:textAllCaps="true"
		android:textColor="@android:color/white"
		android:textSize="@dimen/_15sdp" />

</LinearLayout>