<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_back_white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:title="@string/promptSignUp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp">

        <EditText
            android:id="@+id/signup_txtName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintName"
            android:padding="@dimen/_7sdp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp">

        <EditText
            android:id="@+id/signup_txtEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintEmailId"
            android:padding="@dimen/_7sdp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp">

        <EditText
            android:id="@+id/signup_txtMobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintMobile"
            android:padding="@dimen/_7sdp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp">

        <EditText
            android:id="@+id/signup_txtPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:inputType="textPassword"
            android:padding="@dimen/_7sdp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_7sdp">

        <EditText
            android:id="@+id/signup_txtConPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintConPassword"
            android:inputType="textPassword"
            android:padding="@dimen/_7sdp" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/signup_txtBtnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/actionRegister"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>