<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_back_white"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <EditText
            android:id="@+id/rc_txtCardId"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintDatacard"
            android:padding="@dimen/_7sdp"
            android:textColor="?attr/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/rc_txtOperater"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/dropdown_box"
        android:gravity="center_vertical"
        android:hint="@string/hintOperater"
        android:padding="@dimen/_7sdp"
        android:textAllCaps="true"
        android:textColor="?attr/colorPrimary"
        android:textSize="@dimen/_15sdp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp">

        <EditText
            android:id="@+id/rc_txtAmount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/back"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hintAmount"
            android:padding="@dimen/_7sdp"
            android:inputType="number"
            android:textColor="?attr/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/rc_txtProceed"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back"
        android:gravity="center"
        android:padding="@dimen/_7sdp"
        android:text="@string/actionProceed"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp" />

</LinearLayout>