<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_5sdp"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:background="@color/colorBack"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:background="?attr/colorPrimary"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/_10sdp"
            android:text="@string/actionForgotPassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp">

            <EditText
                android:id="@+id/fp_txtLoginId"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                android:background="@drawable/back"
                android:backgroundTint="@android:color/white"
                android:hint="@string/hint_login"
                android:padding="@dimen/_7sdp" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/fp_txtProceed"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_35sdp"
            android:layout_gravity="right"
            android:layout_margin="@dimen/_15sdp"
            android:background="@drawable/back"
            android:gravity="center"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingRight="@dimen/_10sdp"
            android:text="@string/actionProceed"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

</android.support.v7.widget.CardView>